Sentence and label extraction

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+#Jupyter Notebook
 .ipynb_checkpoints
+
+#Playground dir contains test code that are only for implementation purposes
+[Pp]layground
+
+#Docs folder contains explanation for each funtion, may be uploaded later
+[Dd]ocs 
